<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/parkyourcar"
        style="@style/signup"
        android:layout_width="410dp"
        android:layout_height="42dp"
        android:layout_marginTop="161dp"
        android:layout_marginBottom="528dp"
        android:background="#E4CF10"
        android:text="@string/sign_up"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="384dp"
        android:layout_height="412dp"
        android:background="#E4CF10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parkyourcar">

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="97dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/signup_password_confirm"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_username"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="213dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_username"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="251dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/create_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/signup_createbtn"
            android:layout_width="184dp"
            android:layout_height="38dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="98dp"
            android:layout_marginTop="266dp"
            android:layout_marginEnd="102dp"
            android:layout_marginBottom="108dp"
            android:background="@android:color/black"
            android:text="@string/create_account"
            android:textColor="#E4CF10"
            android:textSize="20sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>