<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:background="@drawable/bg"
    tools:context=".Register">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="365dp"
        android:layout_height="303dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="271dp"
        android:background="#E4CF10"
        android:transitionGroup="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/insertbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="134dp"
            android:layout_marginTop="231dp"
            android:background="@android:color/black"
            android:text="@string/insert"
            android:textColor="#E4CF10"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_lp"
            android:layout_width="243dp"
            android:layout_height="61dp"
            android:layout_below="@+id/register"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="59dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="63dp"
            android:background="@android:color/white"
            android:hint="@string/license_plate_number" />

        <TextView
            android:id="@+id/register"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="66dp"
            android:text="@string/register"

            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#1549CC"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RelativeLayout>

    <TextView
        android:id="@+id/showingdb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/records_show_here"
        android:textColor="#382387"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>